# travel-site-generator

./: LICENSE  README.md  pyproject.toml
docs/: structure.md
src/travel_site_generator/: cache.py  cli.py  generator.py  journey.py  journeys.py  journeys_parser.py  loader.py  models.py  osm.py  places.py  routes.py  statistics.py  timeline.py  trip.py  trip_parser.py  trips.py  writer.py
src/travel_site_generator/static/: defaults.css  index.css  map.css  reset.css  statistics.css  timeline.css
src/travel_site_generator/templates/: _map.html  _statistics.html  _timeline.html  index.html
tests/: test_journeys.py  test_journeys_parser.py  test_trip_parser.py  test_trips.py
