[project]
name = "travel-site-generator"
version = "0.1.0"
description = "A static site generator for creating travel journals."
readme = "README.md"
authors = [
    { name = "Thomas Leese", email = "thomas@leese.io" }
]
requires-python = ">=3.14"
dependencies = [
    "google-maps-routing>=0.10.0",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "platformdirs>=4.9.6",
    "polyline>=2.0.4",
    "python-frontmatter>=1.1.0",
    "pyyaml>=6.0.3",
    "tzfpy[tzdata]>=1.2.0",
]

[project.scripts]
travel-site-generator = "travel_site_generator.cli:main"

[build-system]
requires = ["uv_build>=0.9.22,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.14.11",
]
